force-app/main/default/objects/Grant__c/fields/National_Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Status__c</fullName>
    <formula>TEXT(National_Grant__r.Grant_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Status</label>
    <type>Text</type>
</CustomField>