force-app/main/default/objects/Grant__c/fields/National_Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Year__c</fullName>
    <formula>National_Grant__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Year</label>
    <type>Text</type>
</CustomField>