force-app/main/default/objects/Grant__c/fields/National_Organization__c.field-meta.xml
<CustomField>
    <fullName>National_Organization__c</fullName>
    <formula>National_Grant__r.Account__r.Name</formula>
    <label>National Organization</label>
    <type>Text</type>
</CustomField>