force-app/main/default/objects/Grant__c/fields/New_Indirect_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Indirect_Rate_Amount__c</fullName>
    <label>New Indirect Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>