force-app/main/default/objects/Grant__c/fields/New_Match_Goal__c.field-meta.xml
<CustomField>
    <fullName>New_Match_Goal__c</fullName>
    <label>New Match Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>