force-app/main/default/objects/Grant__c/fields/NPAL_Target_Number_of_Mentors__c.field-meta.xml
<CustomField>
    <fullName>NPAL_Target_Number_of_Mentors__c</fullName>
    <formula>mceiling(NPAL_Target_Number_of_Youth__c/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >The target number of mentors for this grant. Equals the target youth divided by 7. For NPAL only.</inlineHelpText>
    <label>NPAL Target Number of Mentors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>