force-app/main/default/objects/Grant__c/fields/NPAL_Target_Number_of_Youth__c.field-meta.xml
<CustomField>
    <fullName>NPAL_Target_Number_of_Youth__c</fullName>
    <formula>Amount__c /900</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >The target number of youth for the organization to serve with this grant. Equals the grant amount divided by 900. This calculation is for NPAL only.</inlineHelpText>
    <label>NPAL Target Number of Youth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>