force-app/main/default/objects/Grant__c/fields/Number_of_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvals_Required__c</fullName>
    <defaultValue>3</defaultValue>
    <label># of Approvals Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>