force-app/main/default/objects/Grant__c/fields/Number_of_Mentors_Text__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mentors_Text__c</fullName>
    <description>Coverts Mentor fields to text for LOA pull-in.</description>
    <formula>TEXT(Mentors_Required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Mentors Text</label>
    <type>Text</type>
</CustomField>