force-app/main/default/objects/Grant__c/fields/Number_of_Progress_Reports__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Progress_Reports__c</fullName>
    <formula>TEXT(
IF(NOT(ISNULL(Progress_Report_1_Date__c)), +1, +0) + 
IF(NOT(ISNULL(Progress_Report_2_Date__c)), +1, +0) + 
IF(NOT(ISNULL(Progress_Report_3_Date__c)), +1, +0) + 
IF(NOT(ISNULL(Progress_Report_4_Date__c)), +1, +0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Progress Reports</label>
    <type>Text</type>
</CustomField>