force-app/main/default/objects/Grant__c/fields/Number_of_Reimbursements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reimbursements__c</fullName>
    <label>Number of Reimbursements</label>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>