force-app/main/default/objects/Grant__c/fields/Opportunities_Provided_by_Funding__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Provided_by_Funding__c</fullName>
    <label>Opportunities Provided by Funding</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>