force-app/main/default/objects/Grant__c/fields/Overview_of_Outcomes_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_Outcomes_Achieved__c</fullName>
    <label>Overview of Outcomes Achieved</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>