force-app/main/default/objects/Grant__c/fields/Prevent_Skip_Reimbursement_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Skip_Reimbursement_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Skip Reimbursement Approvals</label>
    <type>Checkbox</type>
</CustomField>