force-app/main/default/objects/Grant__c/fields/Previously_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previously_Awarded_Amount__c</fullName>
    <label>Previously Awarded Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>