force-app/main/default/objects/Grant__c/fields/Primary_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_FirstName__c</fullName>
    <formula>Primary_Contact__r.FirstName</formula>
    <label>Primary Contact FirstName</label>
    <type>Text</type>
</CustomField>