force-app/main/default/objects/Grant__c/fields/Primary_Contact_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_TEXT__c</fullName>
    <formula
  >Primary_Contact__r.FirstName&amp;&quot; &quot;&amp;Primary_Contact__r.LastName</formula>
    <label>Primary Contact TEXT</label>
    <type>Text</type>
</CustomField>