force-app/main/default/objects/Grant__c/fields/Procurement_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Threshold__c</fullName>
    <label>Procurement Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>