force-app/main/default/objects/Grant__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grants (Program Coordinator)</relationshipLabel>
    <relationshipName>PC_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>