force-app/main/default/objects/Grant__c/fields/Progress_Report_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Report_1_Date__c</fullName>
    <label>Progress Report 1 Date</label>
    <type>Date</type>
</CustomField>