force-app/main/default/objects/Grant__c/fields/Reimbursement_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Approved_Amount__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Requests: Total Approved Amount where Status = Approved, Paid, Closed</inlineHelpText>
    <label>Reimbursement Approved Amount</label>
    <summarizedField
  >Reimbursement_Request__c.Total_Approved_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Paid, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>