force-app/main/default/objects/Grant__c/fields/Reimbursement_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Requested_Amount__c</fullName>
    <formula
  >Reimbursement_Requested_Salary__c + Reimbursement_Requested_Benefits__c + Requested_Amount_Submitted__c + IF(ISPICKVAL(Use_Indirect_Rate__c, &apos;Yes&apos;), IF(FirstPic_National_Org_Code__c = &apos;BBBSA&apos;, Requested_Indirect_Rate_Amount__c, Requested_Indirect_Costs__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Reimbursement_Requested_Salary__c + Reimbursement_Requested_Benefits__c + Requested_Amount_Submitted__c + IF(ISPICKVAL(Use_Indirect_Rate__c, &apos;Yes&apos;), IF(FirstPic_National_Org_Code__c = &apos;BBBSA&apos;, Requested_Indirect_Rate_Amount__c, Requested_Indirect_Costs__c</inlineHelpText>
    <label>Total Reimbursement Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>