force-app/main/default/objects/Grant__c/fields/Reimbursements_Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Reimbursements_Pending_Approval__c</fullName>
    <label>Reimbursements Pending Approval</label>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>equals</operation>
        <value
    >Pending First Approval, Pending Second Approval, Pending Third Approval, Pending Fourth Approval, Pending Final Approval, Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>