force-app/main/default/objects/Grant__c/fields/Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Due_Date__c</fullName>
    <label>Report Due Date</label>
    <type>Date</type>
</CustomField>