force-app/main/default/objects/Grant__c/fields/Report_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Submitted_Date__c</fullName>
    <label>Report Submitted Date</label>
    <type>Date</type>
</CustomField>