force-app/main/default/objects/Grant__c/fields/Requested_Amount_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_Submitted__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Requests: Requested Expenses where Status = Incomplete or Denied</inlineHelpText>
    <label>Requested Expenses Amount Submitted</label>
    <summarizedField
  >Reimbursement_Request__c.Requested_Expenses__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Incomplete, Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>