force-app/main/default/objects/Grant__c/fields/Requested_Indirect_Costs__c.field-meta.xml
<CustomField>
    <fullName>Requested_Indirect_Costs__c</fullName>
    <label>Requested Indirect Costs</label>
    <summarizedField
  >Reimbursement_Request__c.Requested_Indirect_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Incomplete, Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>