force-app/main/default/objects/Grant__c/fields/Requested_Indirect_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Indirect_Rate_Amount__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Requests: Requested Indirect Costs</inlineHelpText>
    <label>Requested Indirect Rate Amount</label>
    <summarizedField
  >Reimbursement_Request__c.Indirect_Rate_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Incomplete, Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>