force-app/main/default/objects/Grant__c/fields/Salary_Balance__c.field-meta.xml
<CustomField>
    <fullName>Salary_Balance__c</fullName>
    <formula>Total_Wages_Budgeted__c - Total_Salary_Reimbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total_Wages_Budgeted__c - Total_Salary_Reimbursed__c</inlineHelpText>
    <label>Salary Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>