force-app/main/default/objects/Grant__c/fields/Secondary_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver_Id__c</fullName>
    <formula>CASESAFEID(Account__r.Secondary_Approver__c)</formula>
    <label>Secondary Approver Id</label>
    <type>Text</type>
</CustomField>