force-app/main/default/objects/Grant__c/fields/Sertifi_CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>Sertifi_CEO_Name__c</fullName>
    <formula>Account__r.CEO_Name__c+&quot;, CEO&quot;</formula>
    <label>Sertifi CEO Name</label>
    <type>Text</type>
</CustomField>