force-app/main/default/objects/Grant__c/fields/Sertifi_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Sertifi_Youth_Served__c</fullName>
    <formula>TEXT( Youth_Served__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sertifi Youth Served</label>
    <type>Text</type>
</CustomField>