force-app/main/default/objects/Grant__c/fields/Sertifi_Youth_Units__c.field-meta.xml
<CustomField>
    <fullName>Sertifi_Youth_Units__c</fullName>
    <formula>TEXT( Number_of_Sites__c )</formula>
    <label>Sertifi Youth Units</label>
    <type>Text</type>
</CustomField>