force-app/main/default/objects/Grant__c/fields/Signed_LOA_Received__c.field-meta.xml
<CustomField>
    <fullName>Signed_LOA_Received__c</fullName>
    <label>Signed LOA Received</label>
    <type>Date</type>
</CustomField>