force-app/main/default/objects/Grant__c/fields/Source_Type_Options__c.field-meta.xml
<CustomField>
    <fullName>Source_Type_Options__c</fullName>
    <label>Source Type Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baltimore Gas &amp; Electric</fullName>
            </value>
            <value>
                <fullName>Bauer Foundation</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>CareFirst</fullName>
            </value>
            <value>
                <fullName>Charles Crane Foundation</fullName>
            </value>
            <value>
                <fullName>COPS</fullName>
            </value>
            <value>
                <fullName>CRSF</fullName>
            </value>
            <value>
                <fullName>Fund II</fullName>
            </value>
            <value>
                <fullName>GEICO</fullName>
            </value>
            <value>
                <fullName>Healthy Lifestyles (HL)</fullName>
            </value>
            <value>
                <fullName>Herb Block Foundation</fullName>
            </value>
            <value>
                <fullName>Marriott Foundation</fullName>
            </value>
            <value>
                <fullName>Mississippi Department of Human Services</fullName>
            </value>
            <value>
                <fullName>Naples Children &amp; Education Foundation</fullName>
            </value>
            <value>
                <fullName>Niagara Cares</fullName>
            </value>
            <value>
                <fullName>Niagara Cares Hurricane Relief Foundation</fullName>
            </value>
            <value>
                <fullName>North Carolina Department of Justice</fullName>
            </value>
            <value>
                <fullName
        >Office of Juvenile Justice &amp; Delinquency Prevention</fullName>
                <label
        >Office of Juvenile Justice &amp; Delinquency Prevention</label>
            </value>
            <value>
                <fullName>Ohio Office of the Attorney General</fullName>
            </value>
            <value>
                <fullName>Perdue &amp; Henson Foundation</fullName>
            </value>
            <value>
                <fullName>Prince William HIDTA</fullName>
            </value>
            <value>
                <fullName>Private Grants</fullName>
            </value>
            <value>
                <fullName>Roanoke HIDTA</fullName>
            </value>
            <value>
                <fullName>SUEZ</fullName>
            </value>
            <value>
                <fullName>Sun Trust Bank</fullName>
            </value>
            <value>
                <fullName>TransAmerica</fullName>
            </value>
            <value>
                <fullName>Under Armour</fullName>
            </value>
            <value>
                <fullName>United Health Care</fullName>
            </value>
            <value>
                <fullName>US Department of State</fullName>
            </value>
            <value>
                <fullName>Viragh Family Foundation</fullName>
            </value>
            <value>
                <fullName>Washington/Baltimore HIDTA</fullName>
            </value>
            <value>
                <fullName>Wisconsin Department of Justice</fullName>
            </value>
            <value>
                <fullName>YDP Growth Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>