force-app/main/default/objects/Grant__c/fields/Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions__c</fullName>
    <label>Special Conditions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>