force-app/main/default/objects/Grant__c/fields/ST_Baltimore_Gas_Electric__c.field-meta.xml
<CustomField>
    <fullName>ST_Baltimore_Gas_Electric__c</fullName>
    <label>ST: Baltimore Gas &amp; Electric</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>