force-app/main/default/objects/Grant__c/fields/ST_Bauer_Foundation__c.field-meta.xml
<CustomField>
    <fullName>ST_Bauer_Foundation__c</fullName>
    <label>ST: Bauer Foundation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>