force-app/main/default/objects/Grant__c/fields/ST_Blue_Cross_Blue_Shield__c.field-meta.xml
<CustomField>
    <fullName>ST_Blue_Cross_Blue_Shield__c</fullName>
    <label>ST: Blue Cross Blue Shield</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>