force-app/main/default/objects/Grant__c/fields/ST_CareFirst__c.field-meta.xml
<CustomField>
    <fullName>ST_CareFirst__c</fullName>
    <label>ST: CareFirst</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>