force-app/main/default/objects/Grant__c/fields/ST_Charles_Crane_Foundation__c.field-meta.xml
<CustomField>
    <fullName>ST_Charles_Crane_Foundation__c</fullName>
    <label>ST: Charles Crane Foundation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>