force-app/main/default/objects/Grant__c/fields/ST_Charles_T_Bauer_Charitable_Fdn__c.field-meta.xml
<CustomField>
    <fullName>ST_Charles_T_Bauer_Charitable_Fdn__c</fullName>
    <label>ST: Charles T. Bauer Charitable Fdn</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>