force-app/main/default/objects/Grant__c/fields/ST_COPS__c.field-meta.xml
<CustomField>
    <fullName>ST_COPS__c</fullName>
    <label>ST: COPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>