force-app/main/default/objects/Grant__c/fields/ST_Fund_II__c.field-meta.xml
<CustomField>
    <fullName>ST_Fund_II__c</fullName>
    <label>ST: Fund II</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>