force-app/main/default/objects/Grant__c/fields/ST_GEICO__c.field-meta.xml
<CustomField>
    <fullName>ST_GEICO__c</fullName>
    <label>ST: GEICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>