force-app/main/default/objects/Grant__c/fields/ST_Healthy_Lifestyles_HL__c.field-meta.xml
<CustomField>
    <fullName>ST_Healthy_Lifestyles_HL__c</fullName>
    <label>ST: Healthy Lifestyles (HL)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>